--- a/snippets/modals.liquid
+++ b/snippets/modals.liquid
@@ -55,7 +55,7 @@
 </div>
 
 <!-- Terms & Conditions Modal -->
-<div class="modal fade portfolio-modal text-center" role="dialog" tabindex="-1" id="Privacy">
+<div class="modal fade portfolio-modal text-center" role="dialog" tabindex="-1" id="Terms">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-body">
@@ -71,7 +71,7 @@
                                     sunt officia
                                     expedita beatae
                                     cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p><br/>
-                                    <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fa fa-check"></i><span> Lo comprendo</span></button>
+                                    <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fa fa-check"></i><span> Acepto</span></button>
                             </div>
                         </div>
                     </div>
