--- a/snippets/navbar.liquid
+++ b/snippets/navbar.liquid
@@ -3,7 +3,7 @@
 
         <!-- Brand Logo -->
         <a class="navbar-brand logo logopoolmex" href="/" style="font-family: 'Source Serif Pro', serif;">
-          PoolMex
+          <img src="https://cdn.shopify.com/s/files/1/0452/7344/8600/files/Original_on_Transparent.png?v=1597918633" style="margin-top:1.5px; max-width:105px;">
         </a>
 
         <!-- Mobile toggle -->
