--- a/sections/unmodifiable-footer.liquid
+++ b/sections/unmodifiable-footer.liquid
@@ -8,7 +8,7 @@
           data-aos-once="true">
           <h3 style="margin-top: 15px;color: rgb(0,0,0);">Acerca de</h3>
           <ul>
-            <li><a href="contact.html" style="color: rgb(28,28,28);">Contacto</a></li>
+            <li><a href="https://www.poolmex.com.mx/pages/contacto" style="color: rgb(28,28,28);">Contacto</a></li>
             <li><a href="#FAQ" style="color: rgb(28,28,28);" data-toggle="modal">Preguentas Frecuentes</a></li>
           </ul>
         </div>
