--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -1,7 +1,7 @@
 {% form 'product', product, data-product-form: '', data-product-handle: product.handle, data-enable-history-state: 'true' %}
 
   <!-- A Select with the product's variants -->
-  <select name="id" v-model="form.id" id="variant_id"  class="form-control">
+  <select name="id" v-model="form.id" id="variant_id" class="form-control" style="display: none;">
     {% for variant in product.variants %}
       <option
         {% if variant == current_variant %}selected="selected"{% endif %}
@@ -25,9 +25,11 @@
   </select>
 </noscript>
 
+<br/>
+
 <div class="form-group">
     <div class="row align-items-end">
-      <div class="col-md-6" style="margin-top:15px;">
+      <div class="col-md-6" style="margin-top:15px; float: left;">
           <label for="Quantity" class="form-label">{{ 'products.product.quantity' | t }}</label>
           <input type="number" v-model="form.quantity" class="form-control" id="Quantity" name="quantity" value="1" min="1">
       </div>
