--- a/sections/unmodifiable-footer.liquid
+++ b/sections/unmodifiable-footer.liquid
@@ -9,7 +9,7 @@
           <h3 style="margin-top: 15px;color: rgb(0,0,0);">Acerca de</h3>
           <ul>
             <li><a href="https://www.poolmex.com.mx/pages/contacto" style="color: rgb(28,28,28);">Contacto</a></li>
-            <li><a href="#FAQ" style="color: rgb(28,28,28);" data-toggle="modal">Preguentas Frecuentes</a></li>
+            <li><a href="#FAQ" style="color: rgb(28,28,28);" data-toggle="modal">Preguntas Frecuentes</a></li>
           </ul>
         </div>
 
@@ -32,8 +32,8 @@
           <img src="{{ 'paypal.png' | asset_img_url: 'medium' }}" style="max-width: 50px;margin: 10px;">
           <img src="{{ 'mercadopago.jpg' | asset_img_url: 'medium' }}" style="max-width: 50px;margin: 10px;">
           <img src="{{ 'oxxo.png' | asset_img_url: 'medium' }}" style="max-width: 50px;margin: 10px;">
-          <img src="{{ 'protected.png' | asset_img_url: 'medium' }}"
-            style="max-width: 50px;margin: 10px;margin-top: 18px;">
+          <img src="{{ 'protected.png' | asset_img_url: 'medium' }}" style="max-width: 50px;margin: 10px;margin-top: 18px;">
+          <img src="{{ 'AMEX.png' | asset_img_url: 'medium' }}" style="max-width: 50px;margin: 10px;margin-top: 18px;">
         </div>
       </div>
 
