--- a/snippets/modals.liquid
+++ b/snippets/modals.liquid
@@ -36,14 +36,10 @@
                     <div class="row">
                         <div class="col-lg-8 mx-auto">
                             <div class="modal-body">
-                                <h2 class="text-uppercase">PRIVACIDAD</h2>
-                                <p class="item-intro text-muted">Poolmex utiliza sus cookies</p>
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur
-                                    adipisicing elit. Est
-                                    blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi
-                                    sunt officia
-                                    expedita beatae
-                                    cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p><br/>
+                                <h2 class="text-uppercase">Políticas de Privacidad</h2>
+                                <p class="item-intro text-muted">En POOLMEX respetamos la privacidad de nuestros clientes y usuarios de nuestro sitio web por lo tanto hemos establecido algunas políticas de privacidad para asegurar que su información personal sea manejada de manera responsable. Al usar nuestro sitio web, usted autoriza la recolección y el uso de esta información por POOLMEX.</p>
+                                <p>Nos comprometemos a asegurar la privacidad de la información personal obtenida a través de sus servicios en línea. No obstante, le sugerimos leer la información descrita a continuación para entender el tratamiento de los datos proporcionados.</p>
+                                <p></p>
                                     <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fa fa-check"></i><span> Lo comprendo</span></button>
                             </div>
                         </div>
