To do: FAQs, Privacy policies

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -21,6 +21,9 @@ CSS responsive breakpoints' media queries  */
     .correccionbtn{
         margin-top:0px;
     }
+    .product-names{
+        font-size: 2.5rem;
+    }
 }
 
 /* Large */
@@ -38,6 +41,9 @@ CSS responsive breakpoints' media queries  */
     .correccionbtn{
         margin-top:0px;
     }
+    .product-names{
+        font-size: 2.5rem;
+    }
 }
 
 /* Medium */
@@ -50,10 +56,13 @@ CSS responsive breakpoints' media queries  */
         font-size: 45px;
     }
     .logopoolmex{
-        margin-left: 45%;
+        margin-left: 42%;
     }
     .correccionbtn{
         margin-top:35px;
+    }
+    .product-names{
+        font-size: 2rem;
     }
 }
 
@@ -68,6 +77,9 @@ CSS responsive breakpoints' media queries  */
     .correccionbtn{
         margin-top:35px;
     }
+    .product-names{
+        font-size: 2rem;
+    }
 }
 
 /* Extra Small */
@@ -76,10 +88,13 @@ CSS responsive breakpoints' media queries  */
         height:100%;
     }
     .logopoolmex{
-        margin-left: 37%;
+        margin-left: 34%;
     }
     .correccionbtn{
         margin-top:35px;
+    }
+    .product-names{
+        font-size: 2rem;
     }
 }
 
