--- a/sections/unmodifiable-footer.liquid
+++ b/sections/unmodifiable-footer.liquid
@@ -32,13 +32,13 @@
           <img src="{{ 'paypal.png' | asset_img_url: 'medium' }}" style="max-width: 50px;margin: 10px;">
           <img src="{{ 'mercadopago.jpg' | asset_img_url: 'medium' }}" style="max-width: 50px;margin: 10px;">
           <img src="{{ 'oxxo.png' | asset_img_url: 'medium' }}" style="max-width: 50px;margin: 10px;">
-          <img src="{{ 'protected.png' | asset_img_url: 'medium' }}" style="max-width: 50px;margin: 10px;margin-top: 18px;">
-          <img src="{{ 'AMEX.png' | asset_img_url: 'medium' }}" style="max-width: 50px;margin: 10px;margin-top: 18px;">
+          <img src="{{ 'AMEX.png' | asset_img_url: 'medium' }}" style="max-width: 50px;margin: 10px;">
         </div>
       </div>
 
       <!-- Copyright -->
       <div style="text-align: center;color: #000000;">
+        <img src="{{ 'protected.png' | asset_img_url: 'medium' }}" style="max-width: 125px; margin-bottom:30px;"  data-aos="fade" data-aos-duration="750" data-aos-delay="375" data-aos-once="true">
         <p class="copyright" style="opacity:0.7; color: #000000;font-size: 14px;">Poolmex © 2020 | Todos los derechos reservados.</p>
       </div>
     </div>
