Dynamic Content. To Do: JQuery for the pools' dimensions

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -24,6 +24,9 @@ CSS responsive breakpoints' media queries  */
     .product-names{
         font-size: 2.5rem;
     }
+    .imageIntroTitle{
+        font-size:3rem !important;
+    }
 }
 
 /* Large */
@@ -43,6 +46,9 @@ CSS responsive breakpoints' media queries  */
     }
     .product-names{
         font-size: 2.5rem;
+    }
+    .imageIntroTitle{
+        font-size:2.5rem !important;
     }
 }
 
@@ -64,6 +70,9 @@ CSS responsive breakpoints' media queries  */
     .product-names{
         font-size: 2rem;
     }
+    .imageIntroTitle{
+        font-size:2.5rem !important;
+    }
 }
 
 /* Small */
@@ -80,6 +89,9 @@ CSS responsive breakpoints' media queries  */
     .product-names{
         font-size: 2rem;
     }
+    .imageIntroTitle{
+        font-size:2rem !important;
+    }
 }
 
 /* Extra Small */
@@ -95,6 +107,9 @@ CSS responsive breakpoints' media queries  */
     }
     .product-names{
         font-size: 2rem;
+    }
+    .imageIntroTitle{
+        font-size:2rem !important;
     }
 }
 
