--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -109,7 +109,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     <script src="{{ 'Pretty-Carousel.js' | asset_url }}"></script>
-    <script src="{{ 'smoothproducts.js' | asset_url }}"></script>
+    <script src="{{ 'smoothproducts.min.js' | asset_url }}"></script>
     <script src="{{ 'theme.js' | asset_url }}"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
