Add email to policies

--- a/sections/product.liquid
+++ b/sections/product.liquid
@@ -97,9 +97,9 @@
 
             <!-- Description -->
             <div>
-              <h5 style="margin-top: 35px;">
+              <!--h5 style="margin-top: 35px;">
                 Descripción
-              </h5>
+              </h5-->
 
               <div class="rte" style="padding-top: 10px;">
                 {{ product.description }}
