Change modals' email

--- a/snippets/modals.liquid
+++ b/snippets/modals.liquid
@@ -117,7 +117,7 @@
                             <div class="modal-body">
                                 <h2 class="text-uppercase">Políticas</h2>
                                 
-                                <p class="item-intro" style="color: rgb(3,129,241);">Políticas de Privacidad</p>
+                                <p class="item-intro" style="color: rgb(3,129,241);"><br>Políticas de Privacidad</p>
                                 <p style="text-align: justify;">En POOLMEX respetamos la privacidad de nuestros clientes
                                     y usuarios de nuestro sitio web por lo tanto hemos establecido algunas políticas de
                                     privacidad para asegurar que su información personal sea manejada de manera
@@ -157,7 +157,7 @@
                                     tráfico.<br><br>Puede negarse a aceptar cookies activando la configuración
                                     en su navegador. No obstante, si selecciona esta configuración, quizás no pueda
                                     acceder a determinadas partes del Sitio Web.<br><br>
-                                    <br>Cuando el usuario se encuentre en el sitio ______________
+                                    Cuando el usuario se encuentre en el sitio ______________
                                     compartirá su información con POOLMEX salvo que se especifique lo
                                     contrario.<br><br>POOLMEX no tiene obligación alguna de mantener confidencial
                                     cualquier otra información que el usuario proporcione por medio de
@@ -195,9 +195,10 @@
             <div class="modal-body">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-8 mx-auto">
+                        <div class="col-lg-10 mx-auto">
                             <div class="modal-body">
-                                <p class="item-intro" style="color: rgb(3,129,241);">Cambios y Devoluciones</p>
+                                <h2 class="text-uppercase">Términos y Condiciones</h2>
+                                <p class="item-intro" style="color: rgb(3,129,241);"><br>Cambios y Devoluciones</p>
                                 <p style="text-align: justify;">1. Podrás realizar tu cambio o devolución dentro de los
                                     15 días naturales a partir de que realices tu compra. Toma en cuenta que nuestros
                                     productos deberán estar en óptimas condiciones y sin marcas o señas de
@@ -222,7 +223,6 @@
                                     el nuevo domicilio al que deseas que llegue.<br><br>Si tienes cualquier duda puedes
                                     contactarnos en&nbsp;_____________&nbsp;¡Con gusto te ayudaremos en lo que
                                     necesites!<br><br></p>
-                                <hr><br>
                             </div>
                         </div>
                     </div>
