--- a/snippets/modals.liquid
+++ b/snippets/modals.liquid
@@ -222,7 +222,9 @@
                                     nueva guía por parte del Cliente e indicarnos
                                     el nuevo domicilio al que deseas que llegue.<br><br>Si tienes cualquier duda puedes
                                     contactarnos en&nbsp;_____________&nbsp;¡Con gusto te ayudaremos en lo que
-                                    necesites!<br><br></p>
+                                    necesites!<br><br></p><button
+                                    class="btn btn-primary" data-dismiss="modal" type="button"><i
+                                        class="fa fa-check"></i><span>&nbsp;Lo comprendo</span></button>
                             </div>
                         </div>
                     </div>
