--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -96,7 +96,8 @@
 
           <!-- Product Image -->
           {% if product.featured_image != blank %}
-            <div style="height:225px;" class="d-flex align-items-center">
+            <!-- DIV with classes that center the image -->
+            <div style="height:225px;" class="d-flex align-items-center justify-content-center">
               <a href="{{ product.url | within: collection }}">
                 <img class="img-fluid lazyload d-block mx-auto" src="{{ product.featured_image | img_url: '1160x' }}" alt="{{ product.featured_image.alt | escape }} 
                 data-src="{{ product.featured_image | img_url:'500x500', crop:'center' }}" alt="{{ product.featured_image.alt }}" style="margin-bottom:30px; max-height: 225px;">
