--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -24,6 +24,9 @@ CSS responsive breakpoints' media queries  */
     .product-names{
         font-size: 2.5rem;
     }
+    .product-names2{
+        font-size:24px;
+    }
     .imageIntroTitle{
         font-size:3rem !important;
     }
@@ -46,6 +49,9 @@ CSS responsive breakpoints' media queries  */
     }
     .product-names{
         font-size: 2.5rem;
+    }
+    .product-names2{
+        font-size:24px;
     }
     .imageIntroTitle{
         font-size:2.5rem !important;
@@ -70,6 +76,9 @@ CSS responsive breakpoints' media queries  */
     .product-names{
         font-size: 2rem;
     }
+    .product-names2{
+        font-size:22px;
+    }
     .imageIntroTitle{
         font-size:2.5rem !important;
     }
@@ -89,6 +98,9 @@ CSS responsive breakpoints' media queries  */
     .product-names{
         font-size: 2rem;
     }
+    .product-names2{
+        font-size:22px;
+    }
     .imageIntroTitle{
         font-size:2rem !important;
     }
@@ -107,6 +119,9 @@ CSS responsive breakpoints' media queries  */
     }
     .product-names{
         font-size: 2rem;
+    }
+    .product-names2{
+        font-size:22px;
     }
     .imageIntroTitle{
         font-size:2rem !important;
