--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -81,6 +81,7 @@
 
   <body id="{{ page_title | handle }}" class="template-{{ template.name | handle }}">
 
+    <!-- Who the fuck knows what this link is -->
     <a class="in-page-link sr-only" href="#MainContent">{{ 'general.accessibility.skip_to_content' | t }}</a>
 
     <!-- Bootstrap Navbar, to modify head to "Snippets\navbar.liquid" -->
